--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lint": "eslint lib && jscs lib"
   },
   "dependencies": {
-    "jsdom": "^5.3.0"
+    "jsdom": "^5.3.0",
+    "mkdirp-then": "^1.0.1",
+    "requisition": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "0.20.0",
