--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "jsdom": "^5.3.0",
     "mkdirp-then": "^1.0.1",
-    "requisition": "^1.5.0"
+    "requisition": "^1.5.0",
+    "rimraf-then": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "0.20.0",
