--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mkdirp-then": "^1.0.1",
     "requisition": "^1.5.0",
     "rimraf-then": "^1.0.0",
-    "xtend": "^4.0.0"
+    "xtend": "^4.0.0",
+    "zfill": "0.0.2"
   },
   "devDependencies": {
     "eslint": "0.20.0",
