--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mkdirp-then": "^1.0.1",
     "requisition": "^1.5.0",
     "rimraf-then": "^1.0.0",
+    "throat": "^2.0.2",
     "xtend": "^4.0.0",
     "zfill": "0.0.2"
   },
