--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "requisition": "^1.5.0",
     "rimraf-then": "^1.0.0",
     "throat": "^2.0.2",
+    "xmlserializer": "^0.3.3",
     "xtend": "^4.0.0",
     "zfill": "0.0.2"
   },
