--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "lint": "eslint lib && jscs lib"
   },
   "dependencies": {
+    "cpr": "^0.4.0",
     "jsdom": "^5.3.0",
     "mkdirp-then": "^1.0.1",
     "requisition": "^1.5.0",
     "rimraf-then": "^1.0.0",
+    "thenify": "^3.1.0",
     "throat": "^2.0.2",
     "xmlserializer": "^0.3.3",
     "xtend": "^4.0.0",
+    "yargs": "^3.9.1",
     "zfill": "0.0.2"
   },
   "devDependencies": {
