--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "scaffolding/"
   ],
   "scripts": {
-    "lint": "eslint lib && jscs lib"
+    "lint": "eslint lib"
   },
   "dependencies": {
     "archiver": "^1.3.0",
@@ -29,12 +29,10 @@
     "thenify": "^3.1.0",
     "throat": "^3.0.0",
     "xmlserializer": "^0.6.0",
-    "xtend": "^4.0.0",
     "yargs": "^6.6.0",
     "zfill": "0.0.2"
   },
   "devDependencies": {
-    "eslint": "0.20.0",
-    "jscs": "^1.13.1"
+    "eslint": "3.12.2"
   }
 }
