--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "parahuman",
     "scraper"
   ],
-  "version": "1.0.0-pre",
+  "version": "1.0.0",
   "author": "Domenic Denicola <d@domenic.me> (https://domenic.me/)",
   "license": "WTFPL",
   "repository": "domenic/worm-scraper",
