--- a/package.json
+++ b/package.json
@@ -21,19 +21,18 @@
     "lint": "eslint lib"
   },
   "dependencies": {
-    "archiver": "^3.1.1",
+    "archiver": "^4.0.1",
     "cpr": "^3.0.1",
-    "jsdom": "^15.1.1",
-    "mkdirp-then": "^1.0.1",
-    "mz": "^2.7.0",
+    "jsdom": "^16.2.2",
     "requisition": "^1.5.0",
-    "rimraf-then": "^1.0.0",
-    "thenify": "^3.3.0",
     "throat": "^5.0.0",
     "xmlserializer": "^0.6.1",
-    "yargs": "^13.3.0"
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "eslint": "6.1.0"
+    "eslint": "7.3.1"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
