--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,12 +12,22 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
+
     - uses: actions/setup-node@v1
       with:
         node-version: 14
-    - run: rnpm run lint
+
+    - run: npm run lint
+
     - run: npm install
+
+    - uses: actions/cache@v2
+      with:
+        key: worm-ward-cache-2020-12-31
+        path: ./cache
+
     - run: node ./lib/worm-scraper.js --book=worm
+
     - run: node ./lib/worm-scraper.js --book=ward
   epubcheck:
     name: EPUBCheck
