--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -204,7 +204,7 @@
     "object-curly-newline": ["error", { "multiline": true }],
     "object-curly-spacing": ["error", "always"],
     "object-property-newline": "off",
-    "one-var": ["error", "never"],
+    "one-var": ["error", { "initialized": "never" }],
     "one-var-declaration-per-line": ["error", "initializations"],
     "operator-assignment": ["error", "always"],
     "operator-linebreak": ["error", "after"],
