--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "version": "5.3.0",
   "author": "Domenic Denicola <d@domenic.me> (https://domenic.me/)",
   "license": "WTFPL",
-  "repository": "domenic/worm-scraper",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/domenic/worm-scraper.git"
+  },
   "bin": "lib/worm-scraper.js",
   "files": [
     "covers/",
@@ -20,22 +23,21 @@
     "npm-shrinkwrap.json"
   ],
   "scripts": {
-    "lint": "eslint lib"
+    "lint": "eslint"
   },
   "dependencies": {
-    "archiver": "^5.3.1",
+    "archiver": "^7.0.1",
     "cli-progress": "^3.11.2",
-    "cpr": "^3.0.1",
-    "jsdom": "^20.0.0",
-    "minipass-fetch": "^2.1.0",
-    "workerpool": "^6.2.1",
-    "yargs": "^17.5.1"
+    "jsdom": "^24.1.1",
+    "workerpool": "^9.1.3",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@domenic/eslint-config": "^2.0.0",
-    "eslint": "^8.19.0"
+    "@domenic/eslint-config": "^4.0.1",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0"
   },
   "engines": {
-    "node": ">=16.13.2"
+    "node": ">=20.16.0"
   }
 }
