eBook → ebook in all documentation
This casing appears to be used, e.g., in the latest EPUB specification.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "worm-scraper",
-  "description": "Scrapes the web serial Worm and its sequel Ward into an eBook format",
+  "description": "Scrapes the web serial Worm and its sequel Ward into an ebook format",
   "keywords": [
     "ebook",
     "worm",
