Use the chapter info to power downloading
Now that we have a list of all the chapter URLs, we can use them to power the download step, instead of having a start URL / stop URL / various special cases.

For now we preserve the sequential nature of the download, but the next commit will parallelize.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "bin": "lib/worm-scraper.js",
   "files": [
-    "chapter-data/",
+    "book-data/",
     "covers/",
     "lib/",
     "scaffolding/",
