--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: CI
 on:
   pull_request:
     branches:
@@ -34,6 +34,7 @@ jobs:
     needs: derive-minimum
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         node_version:
           - ${{ needs.derive-minimum.outputs.version }}
