--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: CI
 on:
   pull_request:
     branches:
@@ -7,17 +7,47 @@ on:
     branches:
     - main
 jobs:
-  test:
-    name: Test
+  derive-minimum:
+    name: Derive minimum Node version
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.calc.outputs.version }}
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Derive lowest Node that matches package.json
+      id: calc
+      run: |
+        npm install --no-save semver
+        MIN=$(node - <<'JS'
+          'use strict';
+          const semver = require('semver');
+          const range  = require('./package.json').engines.node;
+          const v = semver.minVersion(range);
+          if (!v) { throw new Error(`Cannot resolve minimum for "${range}"`); }
+          console.log(v.version);
+        JS
+        )
+        echo "version=$MIN" >>"$GITHUB_OUTPUT"
+
+  test:
+    needs: derive-minimum
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node_version:
+          - ${{ needs.derive-minimum.outputs.version }}
+          - 'latest'
+    name: Test on Node ${{ matrix.node_version }}
     steps:
     - uses: actions/checkout@v4
 
     - uses: actions/setup-node@v4
       with:
-        node-version: 20
+        node-version: ${{ matrix.node_version }}
 
-    - run: npm install
+    - run: npm ci
 
     - run: npm run lint
 
